# temp

./: .gitignore  pyproject.toml
core/: settings.py  urls.py
quotes/: admin.py  models.py  urls.py  views.py
quotes/models/: models.py
quotes/services/gpt_extractor/: extractor.py
quotes/services/pdf_processor/: processor.py
quotes/services/price_analyzer/: analyzer.py
quotes/services/report_generator/: generator.py
quotes/templates/quotes/: result.html  upload.html
templates/: base.html
